--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,186 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style-type: none;
+  outline: none;
+  scroll-behavior: smooth;
+  
+}
+::-webkit-scrollbar { 
+  display: none; 
+}
+
+html {
+  font-size: 62.5%;
+  background: url(https://images.unsplash.com/photo-1552654180-304709d2041e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1965&q=80);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+h1 {
+  font-size: 4rem;
+  color: #5d98bd;
+  margin: 4rem 0 1rem 0;
+}
+
+.search-form {
+  width: 60rem;
+  height: 10rem;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background-color: transparent;
+  border-radius: 0.5rem;
+  margin-bottom: 5rem;
+  position: relative;
+}
+
+.search-form input {
+  font-size: 1.6rem;
+  border: none;
+  margin: 0 0.5rem;
+  border-radius: 0.5rem;
+  padding: 1rem 2rem;
+}
+
+.search-form input[type="text"] {
+  padding: 1rem 2rem;
+  width: 60%;
+  color: #555;
+}
+
+.search-form input[type="submit"]:hover{
+  background-color: #8f257d;
+}
+
+.search-form input[type="submit"] {
+  width: 25%;
+  text-transform: uppercase;
+  background-color: #ce3ab5;
+  color: #fff;
+  transition: all linear 0.1s;
+  cursor: pointer;
+}
+
+.recipes {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+
+.recipe {
+  width: 30rem;
+  margin: 3rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #e5e5e5;
+  padding: 2rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.recipe h2 {
+  background-color: rgba(161, 161, 161, 0.7);
+  border-radius: 0.5rem;
+  padding: 0.3rem 0.5rem;
+  position: absolute;
+  top: 2.5rem;
+  left: 2.5rem;
+  right: 2.5rem;
+  font-size: 2rem;
+  color: #fff;
+  z-index: 1000;
+}
+
+.recipe img {
+  /* position: absolute; */
+  border-radius: 0.5rem;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.recipe img:hover{
+  transform: scale(1.05);
+  transition: all 0.5s linear;
+}
+
+.recipe a {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #ce3ab5;
+  text-align: center;
+  margin: 1rem 0;
+}
+.recipe a:hover{
+  color: black;
+}
+
+.recipe button {
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #ce4fb9;
+  border: none;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+  padding: 1rem;
+  cursor: pointer;
+}
+.recipe h3{
+  font-size: 1.3rem;
+}
+.recipe button:hover{
+  background-color: #9c1a87;
+  transition: all linear;
+}
+
+.ingredient-list {
+  margin-top: 1rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+}
+
+.ingredient-list li {
+  margin: 0.5rem 0;
+}
+
+.ingredient-text {
+  font-size: 1.5rem;
+  color: black;
+}
+
+.ingredient-weight {
+  color: #40b48e;
+  font-size: 2rem;
+}
+
+.up svg{
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+  transition: all 0.2s linear;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.up svg:hover{
+  color: #ce3ab5;
 }
